monitoring/consul/4.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consul
  name: consul
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul
  template:
    metadata:
      labels:
        app: consul
    spec:
      containers:
      - name: consul
        image: consul:1.14.5
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8500
        - containerPort: 8300
        - containerPort: 8301
        - containerPort: 8302
        - containerPort: 8600
        - containerPort: 8600
          protocol: UDP
        resources:
          limits:
            cpu: 500m
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 1Gi
        securityContext:
          privileged: true
        livenessProbe:
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8500
          timeoutSeconds: 3
        readinessProbe:
          failureThreshold: 5
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          tcpSocket:
            port: 8500
          timeoutSeconds: 3
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
        - name: consul
          mountPath: /consul/data
          subPath: consul/data
        - name: consul-config
          mountPath: /consul/config/consul.hcl
          subPath: consul.hcl
      volumes:
      - name: localtime
        hostPath:
          path: /etc/localtime
          type: ""
      - name: consul
        persistentVolumeClaim:
          claimName: consul
      - name: consul-config
        configMap:
          name: consul-config
          items:
            - key: consul.hcl
              path: consul.hcl
