monitoring/consul/3.service-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: consul
  namespace: monitoring
  labels:
    app: consul
spec:
  sessionAffinity: ClientIP
  selector:
    app: consul
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8500
      targetPort: 8500
