monitoring/consul/3.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: consul-cs
  namespace: monitoring
  labels:
    app: consul
spec:
  sessionAffinity: ClientIP
  selector:
    app: consul
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 8500
      targetPort: 8500
---
apiVersion: v1
kind: Service
metadata:
  name: consul-hs
  namespace: monitoring
  labels:
    app: consul
spec:
  sessionAffinity: ClientIP
  selector:
    app: consul
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      protocol: TCP
      port: 8500
      targetPort: 8500
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
  namespace: monitoring
  labels:
    app: consul
spec:
  ingressClassName: nginx
  rules:
  - host: consul.github.icu
    http:
      paths:
      - backend:
          service:
            name: consul-cs
            port:
              number: 8500
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - consul.github.icu
    secretName: github-tls
