monitoring/consul/4.service-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: consul
  namespace: monitoring
  labels:
    app: consul
spec:
  ingressClassName: nginx
  rules:
  - host: consul.github.icu
    http:
      paths:
      - backend:
          service:
            name: consul-cs
            port:
              number: 8500
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - consul.github.icu
    secretName: github-tls
